# langchain-course

./: agent_COT.py  agent_ReAct.py  agent_TOT.py  agent_loop_openai_raw_react_prompt.py  agent_tool_calling_ollama.py  pyproject.toml
01_rag_indexing_pipeline/: README.md  architecture.mmd  rag_pinecone_indexing_pipeline.py
02_rag_generation_pipeline/: README.md  rag_generation_from_pinecone.py
03_rag_evaluation_pipeline/: README.md  flow.mmd
rag_evaluation_pipeline/: rag_evaluation.py
